# Financial_Extract_Data_API

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
src/: main.py
src/config/: app.py  logging.py  settings.py  test_settings.py  urls.py
src/core/: apps.py
src/core/services/: cache_service.py
src/core/utils/: retry.py
src/financial/: __init__.py  apps.py  tests.py
src/financial/controllers/: extract_financial_data.py
src/financial/routes/: accounts.py  balances.py  consent.py  dynamic_client.py  transactions.py
src/financial/schemas/: schemas.py
src/financial/services/: client_service.py  consent_service.py  extraction_service.py
src/financial/services/dtos/: client.py  consent.py  extraction.py
src/integration/: enums.py
src/integration/dtos/: integration_dtos.py
src/integration/routes/: base.py
src/integration/services/: router_service.py
src/tests/: conftest.py
src/tests/integration/: test_extract_financial_data.py
src/tests/unit/core/services/: test_cache_service.py
src/tests/unit/financial/controllers/: test_extract_financial_data_controller.py
src/tests/unit/financial/routes/: test_accounts_route.py  test_dynamic_client_route.py
src/tests/unit/financial/schemas/: test_schemas.py
src/tests/unit/financial/services/: test_extraction_service.py
src/tests/unit/integration/routes/: test_base_route.py
